# eternal_dreamweaver

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
core/: app_context.cpp  app_context.hpp  debug_overlay.hpp  lattice_bg.cpp  lattice_bg.hpp  main.cpp  scene.hpp  scene_id.hpp  scene_manager.cpp  scene_manager.hpp
scenes/: main_menu.cpp  register_scenes.hpp
scripts/: run.sh
